--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ span p {
     padding: 14px 250px 14px 20px;
     margin-bottom: 28px;
     margin-right: 40px;
-    border-radius: 4px;
+    border-radius: 4px;blocl
 }
 
 .bttn {
@@ -220,6 +220,7 @@ span p {
     border-radius: 4px;
     color: white;
     text-align: center;
+    display:block;
 }
 
 .main-footer {
